# mcproto

./: .codeclimate.yml  .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  ATTRIBUTION.md  ATTRIBUTION.txt  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  LICENSE-THIRD-PARTY.txt  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  release.sh  versions.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: normalize_coverage.py
.github/workflows/: changelog-fragment.yml  dependabot-auto-merge.yml  docs.yml  fragment-check.yml  issue-labeler.yml  labeler.yml  main.yml  mkdocs.yml  pr-labeler.yml  prepare-release.yml  publish.yml  require-pr-label.yml  stale.yml  status_embed.yml  unit-tests.yml  validation.yml
0.6.0/: 404.html
0.6.0/contributing/guides/: index.html
0.6.0/contributing/issue-guide/: index.html
0.6.0/installation/: index.html
0.6.0/meta/changelog/: index.html
0.6.0/meta/license/: index.html
0.6.0/search/: search_index.json
changes/: +api_pages.docs.md  +changes_readme.docs.md  +contributing_update.docs.md  +custom_mock_mixin.internal.md  +documentation_rename.internal.md  +flake8.internal.md  +include_changelog.docs.md  +loginstart_update.feature.md  +missing_space.bugfix.md  +packet_interactions.feature.md  +server_encryption_fucntions.feature.md  +test-pypi.docs.md  +test-pypi.internal.md  +tests_readme.internal.md  +unpropagating_mock_mixin.internal.md  .template.rst  112.internal.md  113.bugfix.md  114.internal.md  116.breaking.md  12.internal.md  129.docs.md  129.feature.md  13.documentation.md  130.breaking.1.md  130.breaking.2.md  130.bugfix.md  131.internal.md  133.internal.md  139.docs.md  14.bugfix.md  14.feature.md  14.internal.2.md  14.internal.md  141.docs.md  144.docs.md  15.internal.md  153.internal.md  154.internal.md  159.breaking.md  (+58 more)
docs/: LICENSE.md  changelog.md  conf.py  faq.md  index.md  index.rst  installation.md  license.md  version_guarantees.md
docs/_static/: extra.css  extra.js
docs/api/: basic.rst  internal.rst  packets.rst  protocol.rst
docs/api/types/: nbt.rst  (+3 more)
docs/community/: code-of-conduct.md  license.md
docs/contributing/: issue-guide.md  making-a-pr.md  making_a_pr.md  reporting-a-bug.md  reporting_a_bug.md  security-policy.md
docs/examples/: index.rst  status.rst
docs/extensions/: attributetable.py
docs/installation/: changelog.md  index.md  versioning-model.md
docs/meta/: attribution.md  changelog.md  code-of-conduct.md  license.md  support.md  versioning.md
docs/pages/: changelog.rst  code-of-conduct.rst  contributing.rst  faq.rst  installation.rst  version_guarantees.rst
docs/reference/: abc.md  authentication.md  multiplayer.md  packets.md  protocol.md  types.md
docs/scripts/: gen_changelog.py
docs/usage/: authentication.md  authentication.rst  first-steps.md  index.md  index.rst  packet-communication.md
latest/: 404.html  index.html  sitemap.xml
latest/attribution/: index.html
latest/changelog/: index.html
latest/code_of_conduct/: index.html
latest/faq/: index.html
latest/installation/: index.html
latest/license/: index.html
latest/search/: search_index.json
latest/usage/: index.html
latest/version_guarantees/: index.html
mcproto/: buffer.py  client.py  connection.py  encryption.py  exceptions.py  multiplayer.py  server.py
mcproto/auth/: account.py  msa.py  yggdrasil.py
mcproto/interaction/: client.py  server.py
mcproto/interactions/: client.py  exceptions.py  server.py
mcproto/packets/: __init__.py  abc.py  interactions.py  map.py  packet.py  packet_map.py
mcproto/protocol/: __init__.py  abc.py  base_io.py  buffer.py  connection.py  rw_capable.py  utils.py
mcproto/types/: __init__.py  abc.py  advancement.py  angle.py  bitset.py  block_entity.py  chat.py  identifier.py  map_icon.py  modifier.py  nbt.py  particle_data.py  quaternion.py  recipe.py  registry_tag.py  slot.py  trade.py  uuid.py  vec3.py
mcproto/utils/: abc.py  decorators.py  deprecated.py  deprecation.py  version.py  version_map.py
pr-preview/pr-346/: 404.html  index.html  objects.inv  sitemap.xml
pr-preview/pr-498/: sitemap.xml
pr-preview/pr-501/: sitemap.xml
pr-preview/pr-502/: sitemap.xml
pr-preview/pr-503/: sitemap.xml
pr-preview/pr-505/: index.html
pr-preview/pr-506/: sitemap.xml
pr-preview/pr-507/: sitemap.xml
pr-preview/pr-508/: sitemap.xml
pr-preview/pr-509/: sitemap.xml
pr-preview/pr-511/: sitemap.xml
pr-preview/pr-513/: sitemap.xml
pr-preview/pr-514/: sitemap.xml
pr-preview/pr-521/: sitemap.xml
pr-preview/pr-528/: index.html
pr-preview/pr-530/: sitemap.xml
pr-preview/pr-532/: sitemap.xml
pr-preview/pr-535/: 404.html  sitemap.xml
pr-preview/pr-536/: sitemap.xml
pr-preview/pr-537/: 404.html  sitemap.xml
pr-preview/pr-539/: sitemap.xml
pr-preview/pr-541/: sitemap.xml
pr-preview/pr-542/: index.html  sitemap.xml
pr-preview/pr-543/: sitemap.xml
pr-preview/pr-544/: sitemap.xml
pr-preview/pr-545/: sitemap.xml
pr-preview/pr-546/: sitemap.xml
pr-preview/pr-547/: sitemap.xml
pr-preview/pr-548/: objects.inv  sitemap.xml
pr-preview/pr-550/: sitemap.xml
pr-preview/pr-551/: sitemap.xml
pr-preview/pr-553/: sitemap.xml
pr-preview/pr-554/: sitemap.xml
pr-preview/pr-555/: sitemap.xml
pr-preview/pr-556/: sitemap.xml
pr-preview/pr-557/: sitemap.xml
pr-preview/pr-559/: sitemap.xml
pr-preview/pr-560/: sitemap.xml
pr-preview/pr-561/: sitemap.xml
pr-preview/pr-564/: sitemap.xml
pr-preview/pr-565/: sitemap.xml
pr-preview/pr-566/: sitemap.xml
pr-preview/pr-567/: sitemap.xml
pr-preview/pr-568/: sitemap.xml
scripts/: entity_generator.py  entity_generator_data.py
tests/: README.md  helpers.py  test_buffer.py  test_connection.py
tests/mcproto/: test_buffer.py  test_connection.py  test_encryption.py  test_multiplayer.py
tests/protocol/: helpers.py  test_abc.py  test_base_io.py  test_buffer.py  test_connection.py  test_utils.py
tests/utils/: test_deprecation.py  test_version.py
(+450 files in other folders)
