[tool.poetry]
name = "mcproto"
version = "0.0.1" # Versioning handled by poetry-dynamic-versioning
description = "Library providing easy interactions with minecraft servers"
authors = ["ItsDrike <itsdrike@protonmail.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/py-mine/mcproto"
documentation = "https://mcproto.readthedocs.io/"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Games/Entertainment",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Networking",
  "Typing :: Typed",
]
include = ["CHANGELOG.md"]
packages = [{ include = "mcproto" }]

[tool.poetry.dependencies]
python = ">=3.8.1,<4"
asyncio-dgram = "^2.1.2"
typing-extensions = "^4.4.0"
semantic-version = "^2.10.0"
httpx = "^0.24.1"
cryptography = ">=41.0.3,<43.0.0"
attrs = "^23.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=2.18.1,<4.0.0"
taskipy = "^1.10.4"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-asyncio = ">=0.21,<0.24"
pytest-cov = ">=3,<6"
pytest-httpx = { version = ">=0.23.1,<0.25.0", python = ">=3.9,<4" }

[tool.poetry.group.lint.dependencies]
ruff = ">=0.3.4,<0.5.0"
pyright = "^1.1.313"
slotscheck = ">=0.16.1,<0.20.0"

[tool.poetry.group.release.dependencies]
towncrier = ">=22.12,<24.0"

[tool.poetry.group.release-ci]
optional = true

[tool.poetry.group.release-ci.dependencies]
poetry-dynamic-versioning = ">=0.22,<1.4"

[tool.poetry.group.docs.dependencies]
sphinx = ">=6.2.1,<8.0.0"
tomli = { version = "^2.0.1", python = "<3.11" }
m2r2 = "^0.3.3.post2"
packaging = ">=23.1,<25.0"
sphinx-autodoc-typehints = ">=1.23,<3.0"
sphinx-copybutton = "^0.5.2"
furo = ">=2022.12.7"
sphinxcontrib-towncrier = ">=0.3.2,<0.5.0"
pytest = "^7.3.1" # Required to import the gen_test_serializable function to list it in the docs

[tool.poetry.group.docs-ci]
optional = true

[tool.poetry.group.docs-ci.dependencies]
poetry-dynamic-versioning = ">=0.22,<1.4"
taskipy = "^1.10.4"

[tool.pyright]
pythonVersion = "3.8"

reportUntypedFunctionDecorator = "error"
reportUntypedClassDecorator = "error"
reportUntypedNamedTuple = "error"
reportTypeCommentUsage = "error"
reportConstantRedefinition = "error"
reportDeprecated = "warning"
reportIncompatibleMethodOverride = "error"
reportOverlappingOverload = "error"
reportUnnecessaryIsInstance = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportImplicitOverride = "error"
reportShadowedImports = "error"

[tool.ruff]
target-version = "py38"
line-length = 119

[tool.ruff.lint]
select = [
  "F",     # Pyflakes
  "E",     # Pycodestyle (errors)
  "W",     # Pycodestyle (warnigns)
  "N",     # pep8-naming
  "D",     # pydocstyle
  "UP",    # pyupgrade
  "YTT",   # flake8-2020
  "ANN",   # flake8-annotations
  "ASYNC", # flake8-async
  "S",     # flake8-bandit
  "BLE",   # flake8-blind-except
  "B",     # flake8-bugbear
  "A",     # flake8-builtins
  "COM",   # flake8-commas
  "C4",    # flake8-comprehensions
  "DTZ",   # flake8-datetimez
  "T10",   # flake8-debugger
  "EM",    # flake8-errmsg
  "EXE",   # flake8-executable
  "FA",    # flake8-future-annotations
  "ISC",   # flake8-implicit-str-concat
  "ICN",   # flake8-import-conventions
  "LOG",   # flake8-logging
  "G",     # flake8-logging-format
  "INP",   # flake8-no-pep420
  "PIE",   # flake8-pie
  "T20",   # flake8-print
  "PYI",   # flake8-pyi
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "RSE",   # flake8-raise
  "RET",   # flake8-return
  "SLOT",  # flake8-slots
  "SIM",   # flake8-simplify
  "TID",   # flake8-tidy-imports
  "TCH",   # flake8-type-checking
  "INT",   # flake8-gettext
  "PTH",   # flake8-use-pathlib
  "TD",    # flake8-todos
  "ERA",   # flake8-eradicate
  "PGH",   # pygrep-hooks
  "PL",    # pylint
  "TRY",   # tryceratops
  "FLY",   # flynt
  "PERF",  # perflint
  "RUF",   # ruff-specific rules
]

ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  "D107", # Missing docstring in __init__
  "D203", # Blank line required before class docstring
  "D213", # Multi-line summary should start at second line (incompatible with D212)
  "D301", # Use r""" if any backslashes in a docstring
  "D405", # Section name should be properly capitalized
  "D406", # Section name should end with a newline
  "D407", # Missing dashed underline after section
  "D408", # Section underline should be in the line following the section's name
  "D409", # Section underline should match the length of its name
  "D410", # Missing blank line after section
  "D411", # Missing blank line before section
  "D412", # No blank lines allowed between a section header and its content
  "D413", # Missing blank line after last section
  "D414", # Section has no content
  "D416", # Section name should end with a colon
  "D417", # Missing argument descrition in the docstring

  "ANN002", # Missing type annotation for *args
  "ANN003", # Missing type annotation for **kwargs
  "ANN101", # Missing type annotation for self in method
  "ANN102", # Missing type annotation for cls in classmethod
  "ANN204", # Missing return type annotation for special method
  "ANN401", # Dynamically typed expressions (typing.Any) disallowed

  "SIM102", # use a single if statement instead of nested if statements
  "SIM108", # Use ternary operator {contents} instead of if-else-block

  "TCH001", # Move application imports used only for annotations into a type-checking block
  "TCH002", # Move 3rd-party imports used only for annotations into a type-checking block
  "TCH003", # Move standard library imports used only for annotations into a type-checking block

  "TD002", # Missing author in TODO
  "TD003", # Missing issue link on the line following this TODO

  "PT011",   # pytest.raises without match parameter is too broad # TODO: Unignore this
  "TRY003",  # No f-strings in raise statements
  "EM101",   # No string literals in exception init
  "EM102",   # No f-strings in exception init
  "UP024",   # Using errors that alias OSError
  "PLR2004", # Using unnamed numerical constants
  "PGH003",  # Using specific rule codes in type ignores
  "E731",    # Don't asign a lambda expression, use a def

  # Redundant rules with ruff-format:
  "E111",   # Indentation of a non-multiple of 4 spaces
  "E114",   # Comment with indentation  of a non-multiple of 4 spaces
  "E117",   # Cheks for over-indented code
  "D206",   # Checks for docstrings indented with tabs
  "D300",   # Checks for docstring that use ''' instead of """
  "Q000",   # Checks of inline strings that use wrong quotes (' instead of ")
  "Q001",   # Multiline string that use wrong quotes (''' instead of """)
  "Q002",   # Checks for docstrings that use wrong quotes (''' instead of """)
  "Q003",   # Checks for avoidable escaped quotes ("\"" -> '"')
  "COM812", # Missing trailing comma (in multi-line lists/tuples/...)
  "COM819", # Prohibited trailing comma (in single-line lists/tuples/...)
  "ISC001", # Single line implicit string concatenation ("hi" "hey" -> "hihey")
  "ISC002", # Multi line implicit string concatenation
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = [
  "ANN",  # flake8-annotations
  "S101", # Use of assert
]
"docs/conf.py" = [
  "INP", # allow implicit namespace (pep 420)
]
"docs/extensions/*" = [
  "D",   # pydocstyle
  "INP", # allow implicit namespace (pep 420)
]
".github/scripts/*" = [
  "D",   # pydocstyle
  "INP", # allow implicit namespace (pep 420)
]

[tool.ruff.lint.isort]
order-by-type = false
case-sensitive = true
combine-as-imports = true

# Redundant rules with ruff-format
force-single-line = false       # forces all imports to appear on their own line
force-wrap-aliases = false      # Split imports with multiple members and at least one alias
lines-after-imports = -1        # The number of blank lines to place after imports
lines-between-types = 0         # Number of lines to place between "direct" and import from imports
split-on-trailing-comma = false # if last member of multiline import has a comma, don't fold it to single line

[tool.ruff.lint.pylint]
max-args = 20
max-branches = 20
max-returns = 20
max-statements = 250

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
line-ending = "lf"

[tool.pytest.ini_options]
minversion = "6.0"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers --cov --no-cov-on-fail"

[tool.coverage.report]
precision = 2
fail_under = 20
show_missing = true
skip_covered = false
skip_empty = false
sort = "cover"
exclude_lines = [
  "\\#\\s*pragma: no cover",
  "^\\s*if (typing\\.)?TYPE_CHECKING:",
  "^\\s*@(abc\\.)?abstractmethod",
  "^\\s*@(typing\\.)?overload",
  "^\\s*def __repr__\\(",
  "^\\s*class .*\\bProtocol\\):",
  "^\\s*raise NotImplementedError",
  "^\\s*return NotImplemented",
  "^\\s*\\.\\.\\.",
]

[tool.coverage.run]
relative_files = true
parallel = true
branch = true
timid = false
source = ["mcproto"]

[tool.towncrier]
package = "mcproto"
directory = "changes"
template = "changes/.template.rst"
filename = "CHANGELOG.md"
issue_format = "[#{issue}](https://github.com/py-mine/mcproto/issues/{issue})"
orphan_prefix = "+" # Use '+' instead of number for fragments not connected to any PR
underlines = [2, 3] # We use this for heading levels (see template file)
type = [
  { name = "Breaking Changes", directory = "breaking", showcontent = true },
  { name = "Deprecation", directory = "deprecation", showcontent = true },
  { name = "Features", directory = "feature", showcontent = true },
  { name = "Bugfixes", directory = "bugfix", showcontent = true },
  { name = "Documentation Improvements", directory = "docs", showcontent = true },
  { name = "Internal Changes", directory = "internal", showcontent = true },
]

[tool.slotscheck]
strict-imports = true
require-superclass = true
require-subclass = true
exclude-modules = '''
(
  ^test  # ignore any tests
  |^.github/scripts  # Ignore any CI scripts
  |^mcproto\.utils\.version  # Dataclasses below python 3.10 don't support __slots__ due to default value fields being treated as classvars.
)
'''

[tool.taskipy.tasks]
precommit = "pre-commit install"
lint = "pre-commit run --all-files"
pyright = "pyright ."
ruff = "ruff check --fix ."
ruff-format = "ruff format ."
slotscheck = "slotscheck -m mcproto"
test = "pytest -v --failed-first"
retest = "pytest -v --last-failed"
test-nocov = "pytest -v --no-cov --failed-first"
retest-nocov = "pytest -v --no-cov --last-failed"
changelog-preview = "towncrier build --draft --version next"
docs = "sphinx-build -b dirhtml -d ./docs/_build/doctrees -W -E -T --keep-going ./docs ./docs/_build/html"

[tool.poetry-dynamic-versioning]
enable = true
bump = true
vcs = "git"
style = "pep440"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
